--- a/add-on/manifest.common.json
+++ b/add-on/manifest.common.json
@@ -2,10 +2,10 @@
   "manifest_version": 3,
   "name": "__MSG_manifest_extensionName__",
   "short_name": "__MSG_manifest_shortExtensionName__",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "__MSG_manifest_extensionDescription__",
-  "homepage_url": "https://github.com/ipfs-shipyard/ipfs-companion",
-  "author": "IPFS Community",
+  "homepage_url": "https://github.com/border-free/ipfs-companion",
+  "author": "Borderfree",
   "icons": {
     "19": "icons/png/ipfs-logo-on_19.png",
     "38": "icons/png/ipfs-logo-on_38.png",
